# cl1proj

./: .gitignore  AGENTS.md  README.md  build.sh  pseudoforget.md  publish.sh  pyproject.toml  python.sh  test-dist.sh  test.py  testcl.py
cl-sdk/: README.md  pyproject.toml
cl-sdk/docs/: _pdoc_pydantic_patch.py  analysis.md  index.md  make.py  module.html.jinja2  syntax-highlighting.css  theme.css
docs/: doc-handler.js  index.html.jinja2  make.py  twin.md
docs/clsdk_bridge/: README.md  adapter.md
docs/sdk/: README.md
docs/snn_reset/: README.md  control_checks.md  full_grid_10k_calibrated_20260602.md  metrics.md  simulator.md
experiments/: README.md
experiments/regression/: README.md  learned_inverse_reset.py  smoke.py
experiments/regression1/: README.md  benchmark.py  learned_inverse_reset.py
experiments/scratchpad/: anisotropic_pathway_erasure.py
experiments/snn_reset/: README.md  common.py  control_checks.py  figlib.py  figures.py  figures_schematics.py  full_grid_search.py  learned_inverse_reset.py  manifold_analysis.py  modal_final_run.py  modal_grid_chunks.py  modal_manifold_run.py  pca_weight_geometry.py  relearning_analysis.py  run_grid.py  task_conditioned_electrode_association.py  task_delayed_conditioned_response.py  task_evoked_channel_response.py  task_pattern_discrimination.py  task_temporal_order_discrimination.py  tasks.py
paper/: main.tex  make_figures.py  refs.bib
paper/reset_as_targeting_problem/: main.tex
paper/snn_reset paper/: Makefile  paper.tex
scripts/: benchmark_snn_reset.py
src/cl/: README.md  _twin_producer.py
(+1064 files in other folders)
