[project]
name = "cl1-reset-experiments"
version = "0.1.0"
authors = [
    { name="abiome-org" },
]
description = "CL1 SNN reset experiment platform with a vendored CL SDK simulator"
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "CC BY-NC 4.0" }
license-files = ["LICEN[CS]E*"]
dependencies = [
    "numpy",
    "msgpack",
    "msgpack_numpy",
    "tables",
    "dotenv",
    "matplotlib",
    "pydantic",
    "scipy",
    "networkx",
    "python-louvain",
    "pandas",
    "brian2",
    "scikit-learn",
    "PyYAML",
    "seaborn",
    "pyarrow",
    "websockets",
    "ipykernel"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest_mock",
    "inline_snapshot[black]",
    "pdoc"
]

[project.urls]
Homepage = "https://github.com/abiome-org/cl1proj"
Documentation = "https://docs.corticallabs.com"
Source = "https://github.com/abiome-org/cl1proj"
Upstream-SDK = "https://github.com/Cortical-Labs/cl-sdk"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/cl",
    "src/cl1_clsdk_bridge",
    "src/cl1_snn_reset",
]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "experiments",
    "build.sh",
    "test-dist.sh",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]
